# Tif_tn_ai

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
admin/backend/: Dockerfile  pyproject.toml
admin/backend/app/: auth.py  config.py  db.py  main.py  pricing.py
admin/backend/app/routers/: broadcast.py  dashboard.py  errors.py  requests.py  usage.py  users.py
admin/frontend/: package-lock.json  package.json
admin/frontend/src/: App.tsx  index.css
admin/frontend/src/api/: auth.ts  broadcast.ts  client.ts  dashboard.ts  errors.ts  requests.ts  usage.ts  users.ts
admin/frontend/src/components/: BlockButton.tsx  ConfidenceBadge.tsx  DataTable.tsx  (+3 more)
admin/nginx/: admin.conf
data/: Poyasneniya  Rules_tn_ved  ПК-181.md
ingestion/: embed.py  load_rules.py  load_surreal.py  parse_classifier.py  parse_duties.py  parse_explanations.py  run_all.py
scripts/: deploy.sh
src/: cards.py  config.py  errors.py  health.py  main.py  session.py
src/ai/: context.py  embeddings.py  llm.py  vision.py
src/db/: client.py  repo.py  schema.surql
src/handlers/: code_actions.py  help.py  history.py  photo.py  query.py  start.py  stats.py  unknown.py  voice.py
src/locales/: en.json  ru.json  uz.json
src/middleware/: logging.py  ratelimit.py  user.py
src/prompts/: output_schema.json  system_base.md
src/rag/: prompts.py  retriever.py
src/stt/: base.py  openai_whisper.py  uzbekvoice.py
src/ui/: formatters.py  i18n.py  keyboards.py
tests/: golden_set.py  test_chunking.py  test_parse_classifier.py  test_parse_duties.py  test_retriever.py
(+10 files in other folders)
